@@ -1,3 +1,8 @@
+2018-02-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/84557
+	* g++.dg/gomp/pr84557.C: New test.
+
 2018-02-26  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/84325
